--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         body{
             background-image: url("backgroundDiana.jpg");
             background-repeat: no-repeat;
-            height: 500px;
+            height: 900px;
             width: auto;
             background-size: cover;
             background-position: center;
@@ -130,6 +130,16 @@
                     <li><a href="lab09/index.html">Lab 09: Page With Media</a></li>
                     <li><a href="lab10/index.html">Lab 10: Animation</a></li>
                 </ul>
+                <div class="clearfloat"></div>
+            </div>
+            <div id="row4">
+                <div class="column" id="pink">
+                    <h3>Final Project</h3>
+                    <ul>
+                        <li><a href="finalproject/index.html">Final Project</a></li>
+                        <li><a href="finalproject/summay.html">Final Project Summary</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="clearfloat"></div>
         </div>
