--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="right">
             <h1>About Me</h1>
-            <p data-scroll>I am Hanzhe Chen (you can also call me Angela), a web developer and programmer. I study in University of Southern California in class of 2026, majors in Computer Science, and minors in Web-development. I can utilize C++, Java, Python, HTML&CSS, and is learning JavaScript. In the future, I hope I can earn my livings with coding. Visit my itp104 course products <a href="../index.html" target="_blank">Here</a>. </p>
+            <p data-scroll>I am Hanzhe Chen (you can also call me Angela), a web developer and programmer. I study in University of Southern California in class of 2026, majors in Computer Science, and minors in Web-development. I can utilize C++, Java, Python, HTML&CSS, and JavaScript. I speak native Mandarin and near-native English. </p>
         </div>
         <div class="clearfloat"></div>
     </div>
