--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
         </div>
         <div class="right">
             <h1>About Me</h1>
-            <p data-scroll>I am Hanzhe Chen (you can also call me Angela), a web developer and programmer. I study in University of Southern California in class of 2026, majors in Computer Science, and minors in Web-development. I can utilize C++, Java, Python, HTML&CSS, and JavaScript. I speak native Mandarin and near-native English. </p>
-        </div>
+            <p data-scroll>
+                I am Hanzhe Chen, but you can also call me Angela. I am a web developer and programmer currently studying at the University of Southern California, class of 2026. I major in Computer Science and minor in Web Development. My skills include C++, Java, Python, HTML & CSS, and JavaScript. I am a native Mandarin speaker and am fluent in English.
+                </p>
+            </div>
         <div class="clearfloat"></div>
     </div>
 
