--- a/index.html
+++ b/index.html
@@ -105,12 +105,16 @@
     <div class="content2">
         <div class="paragraph" id="first_paragraph">
         <h2>Self-introduction</h2>
-        <p data-scroll>I was born on April 12th, 2004 in Beijing, China. I love coding, travelling, playing video games like TFT, Minecraft and Apex Legends, doing sports like tennis, badminton, table tennis and bowling, singing and dancing. A fun fact about me is that over 80% of my drawer is dresses. I am really fond of finding and cooking and of course eating delicious food. I have no idea what else I can put on a self-intro and if you have any great ideas, please click <a href="contact.html" target="_blank">Contact Me</a> page!</p>
+        <p data-scroll>
+            I was born on April 12th, 2004, in Beijing, China. I have a passion for coding, traveling, and playing video games like TFT, Minecraft, and Apex Legends. Sports such as tennis, badminton, table tennis, and bowling keep me active, while singing and dancing allow me to express myself. A fun tidbit about me: over 80% of my wardrobe consists of dresses. I have a keen interest in discovering, cooking, and, of course, savoring delectable food. If you have any suggestions for what else I could include in a self-introduction or have other ideas, please visit the <a href="contact.html" target="_blank">Contact Me</a> page!
+            </p>        
         </div>
         <div class="paragraph">
         <h2>Facts about my name</h2>
-        <p data-scroll>My Chinese name is 陈含哲 <em>Chen Hanzhe</em>. <em>Chen</em> is my family name, and my grandfather granted me the name of <em>Han</em>, meaning to have, the same Chinese character as my cousin, which is casual in China because here we have the tradition of kids in same generations of same gender have the same middle Chinese character. Then to fulfill the trick that my cousin and I both have two 口 characters in the name, my father granted me the name of <em>zhe</em>, meaning philosophy. So my name means to imply philosophy. This is really a cool name and I never see anyone having the same name as I do.</p>
-        </div>
+        <p data-scroll>
+        My Chinese name is 陈含哲, pronounced as <em>Chen Hanzhe</em>. <em>Chen</em> is my family name. My grandfather bestowed upon me the name <em>Han</em>, which means 'to have.' Interestingly, this character is shared with my cousin. This practice is common in China, where we have a tradition of children of the same generation and gender sharing the same middle Chinese character in their names. To ensure that both my cousin's and my names each contain two 口 characters, my father named me <em>Zhe</em>, signifying 'philosophy.' Hence, my name implies 'to hold or possess philosophy.' It's a unique name, and I've yet to meet someone with the same one.
+        </p>        
+    </div>
     </div>
 
 
