--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,8 @@
     <div class="menu">
         <div class="change">
             <a href="index.html">Home</a>
+            <a href="fun.html">AI Newsletter</a>
             <a href="education.html">Education</a>
-            <a href="fun.html">Fun Facts</a>
             <a class="active" href="contact.html">Contact Me</a>
         </div>
     </div>
