--- a/education.html
+++ b/education.html
@@ -162,8 +162,8 @@
     <div class="menu">
         <div class="change">
             <a href="index.html">Home</a>
+            <a href="fun.html">AI Newsletter</a>
             <a class="active" href="education.html">Education</a>
-            <a href="fun.html">Fun Facts</a>
             <a href="contact.html">Contact Me</a>
         </div>
     </div>
