--- a/fun.html
+++ b/fun.html
@@ -83,18 +83,40 @@
     <div class="menu">
         <div class="change">
             <a href="index.html">Home</a>
+            <a class="active" href="fun.html">AI Newsletter</a>
             <a href="education.html">Education</a>
-            <a class="active" href="fun.html">Fun Facts</a>
             <a href="contact.html">Contact Me</a>
         </div>
     </div>
-    <div id="container">
+    <!-- <div id="container">
         <div class="text">
         <h1>This is a video made my friend Moring, Cynthia and I.</h1>
         </div>
         <div class="video">
         <iframe src="//player.bilibili.com/player.html?aid=987601277&bvid=BV1Lt4y1N7Cm&cid=890458678&page=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
+    </div> -->
+    <div id="container">
+        <div class="newsletters">
+        <h1>My Newsletters</h1>
+        <ul>
+            <li><a href="https://www.linkedin.com/posts/hanzhechen_andrew-ng-on-x-activity-7125747469933518848-9a1j?utm_source=share&utm_medium=member_desktop" target="_blank">11/1 Newsletter</a></li>
+            <li><a href="https://www.linkedin.com/posts/hanzhechen_andrew-ng-on-x-activity-7125375457906098177-Vokk?utm_source=share&utm_medium=member_desktop" target="_blank">10/31 Newsletter</a></li>
+            <li><a href="https://www.linkedin.com/posts/hanzhechen_sam-altman-on-x-activity-7125020916199161856-OF49?utm_source=share&utm_medium=member_desktop" target="_blank">10/30 Newsletter</a></li>
+            <li><a href="https://www.linkedin.com/posts/hanzhechen_jim-fan-on-x-activity-7124619441883021312-rhC8?utm_source=share&utm_medium=member_desktoptarget=" target="_blank">10/29 Newsletter</a></li>
+            
+            <li><a href="https://www.linkedin.com/posts/hanzhechen_ldj-on-x-activity-7124248963473428480-b_Td?utm_source=share&utm_medium=member_desktop" target="_blank">10/28 Newsletter</a></li>
+            <li><a href="https://www.linkedin.com/posts/hanzhechen_lewis-tunstall-on-x-activity-7123928637682159617-i58T?utm_source=share&utm_medium=member_desktop" target="_blank">10/27 Newsletter</a></li>
+            <li><a href="https://www.linkedin.com/posts/hanzhechen_weijia-shi-on-x-activity-7123554395476152321-szcU?utm_source=share&utm_medium=member_desktop" target="_blank">10/26 Newsletter</a></li>
+            <li><a href="https://www.linkedin.com/posts/hanzhechen_jim-fan-on-x-activity-7123187820889804800-Vp_l?utm_source=share&utm_medium=member_desktop" target="_blank">10/25 Newsletter</a></li>
+
+
+            </ul>
+        </div>
+    </div>
+
+
+        </ul>
     </div>
 
     <div id="footer">
