Modified Newsletterpage to Resume

--- a/education.html
+++ b/education.html
@@ -162,7 +162,7 @@
     <div class="menu">
         <div class="change">
             <a href="index.html">Home</a>
-            <a href="fun.html">AI Newsletter</a>
+            <a href="fun.html">Resume</a>
             <a class="active" href="education.html">Education</a>
             <a href="contact.html">Contact Me</a>
         </div>
