--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
     <div class="menu">
         <div class="change">
             <a href="index.html">Home</a>
-            <a href="fun.html">AI Newsletter</a>
+            <a href="fun.html">Resume</a>
             <a href="education.html">Education</a>
             <a class="active" href="contact.html">Contact Me</a>
         </div>
