--- a/fun.html
+++ b/fun.html
@@ -7,6 +7,7 @@
     <title>Resume | Hanzhe Chen (Angela) </title>
     <link href="style.css" rel="stylesheet" />
     <style>
+        
         body{
             margin: 0 auto;
         }
@@ -19,10 +20,10 @@
             height: 700px;
             margin: 0 auto;
         }
-        iframe{
+        /* iframe{
             width: 1000px;
             height: 700px;
-        }
+        } */
         .text{
             width: 1000px;
             height: 100px;
@@ -31,18 +32,23 @@
             padding-bottom: 0%;
             text-align: center;
         }
+        .resume-container {
+            padding-top: 60px;
+            width: 100%;
+            height: 940px;
+            margin: 0 auto;
+        }
+        .resume-container embed {
+            width: 100%;
+            height: 100%;
+        }
         @media(max-width: 991px) and  (min-width: 768px){
-            .video{
-                width: 80%;
-            }
+
             .text{
                 width: 100%;
             }
-            iframe{
-                width: 100%;
-                padding: 0;
-                margin: 0;
-                height: 50%;
+            .resume-container {
+                height: 940px;
             }
             .text h1{
                 font-size: 120%;
@@ -54,19 +60,10 @@
             }
         }
         @media(max-width: 768px){
-            .video{
-                width: 80%;
-            }
             .text{
                 width: 100%;
             }
-            iframe{
-                width: 100%;
-                padding: 0;
-                margin: 0;
-                height: 50%;
-                margin-top: 5%;
-            }
+
             .text h1{
                 font-size: 120%;
                 text-align: center;
@@ -74,6 +71,9 @@
             }
             #container{
                 height: 700px;
+            }
+            .resume-container {
+                height: 640px;
             }
 
         }
@@ -83,7 +83,7 @@
     <div class="menu">
         <div class="change">
             <a href="index.html">Home</a>
-            <a class="active" href="fun.html">AI Newsletter</a>
+            <a class="active" href="fun.html">Resume</a>
             <a href="education.html">Education</a>
             <a href="contact.html">Contact Me</a>
         </div>
@@ -96,7 +96,7 @@
         <iframe src="//player.bilibili.com/player.html?aid=987601277&bvid=BV1Lt4y1N7Cm&cid=890458678&page=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
     </div> -->
-    <div id="container">
+    <!-- <div id="container">
         <div class="newsletters">
         <h1>My Newsletters</h1>
         <ul>
@@ -117,7 +117,13 @@
 
 
         </ul>
+    </div> -->
+    <div id="container">
+        <div class="resume-container">
+            <embed src="Resume_Hanzhe_Chen.pdf" type="application/pdf">
+        </div>
     </div>
+
 
     <div id="footer">
         <a href="https://www.instagram.com/lalalaangela_m"  target="_blank">
