--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="menu">
         <div class="change">
             <a class="active" href="index.html">Home</a>
-            <a href="fun.html">AI Newsletter</a>
+            <a href="fun.html">Resume</a>
             <a href="education.html">Education</a>
             <a href="contact.html">Contact Me</a>
         </div>
